--- a/src/Components/Domino/Domino.css
+++ b/src/Components/Domino/Domino.css
@@ -1,13 +1,14 @@
 .domino {
   display: flex;
-  height: 280px;
-  width: 200px;
-  background-color: #17141d;
+  height: 250px;
+  width: 180px;
+  background-color: #88b04b;
   border-radius: 10px;
   box-shadow: -1rem 0 3rem #000;
   transition: 0.4s ease-out;
   position: relative;
   left: 0px;
+  margin: 0px 10px;
 }
 
 .domino:not(:first-child) {
